# cortex-ci

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLIANCE_PLATFORM_PLAN.md  CORTEX-PLAN.md  DEPLOYMENT_STATUS.md  GRC_TRANSFORMATION_PLAN.md  PHASE2_PLAN.md  PHASE_2_1_SUMMARY.md  PLATFORM_STATUS_AND_ROADMAP.md  RUSSIA_COMPLIANCE_REPORT.md  SYNC_SETUP.md  UPGRADE_PLAN.md  docker-compose.dokploy.yml  docker-compose.lightweight.yml  docker-compose.production.yml  docker-compose.yml  fullcheck.sh  screenshot-test.js  take-screenshots.js
backend/: Dockerfile  alembic.ini  calculate_risk_scores.py  generate_massive_data.py  import_sanctions_data.py  import_via_sql.py  load_generated_data.py  populate_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_belarus_crimea_constraints.py  sample_comprehensive_compliance.py  sample_russia_additional_entities.py  sample_russia_beneficial_ownership.py  sample_russia_constraints.py  sample_russia_dependencies.py  sample_russia_energy.py  sample_russia_entities.py  sample_russia_export_controls.py  sample_russia_maritime.py  sample_russia_scenarios.py  sync_sanctions.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_tables.py  003_russian_compliance.py  004_egrul_tables.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  encryption.py  mfa.py  query_optimizer.py  secrets.py  security.py  websocket.py
backend/app/middleware/: __init__.py  rate_limit.py  request_validation.py  security.py
backend/app/models/: __init__.py  ai_analysis.py  audit.py  base.py  constraint.py  dependency.py  entity.py  historical.py  risk.py  risk_justification.py  scenario.py  scenario_chain.py  tenant.py  user.py
backend/app/schemas/: __init__.py  audit.py  auth.py  constraint.py  dependency.py  entity.py  risk.py  scenario.py  tenant.py  user.py
backend/app/services/: advanced_simulation.py  ai_document_service.py  audit_archival.py  bulk_operations.py  document_export.py  document_lifecycle.py  egrul_client.py  egrul_scraper.py  evidence.py  export_service.py  logging_service.py  multi_tenant.py  notifications.py  push_notifications.py  rbac.py  reporting.py  risk_engine.py  ru_task_templates.py  ru_templates_152fz.py  ru_templates_187fz.py  ru_templates_fstec.py  ru_templates_gost57580.py  russian_compliance.py  scenario_simulator.py  screening_service.py  sme_templates_contracts.py  sme_templates_corporate.py  sme_templates_financial.py  sme_templates_hr.py  sme_templates_industry.py  sme_templates_legal.py  sme_templates_specialized.py  (+4 more)
backend/scripts/: create_monitoring_rules.py  import_compliance_data.py  import_mitre.py  import_oscal.py  quality_check.sh  seed_demo.py  seed_full_platform.py  seed_russian_frameworks.py  seed_russian_organizations.py  seed_russian_templates.py
backend/tests/: __init__.py  conftest.py  test_compliance_scoring.py  test_dependencies.py
(+223 files in other folders)
